[package]
name = "ampsrs"
version = "0.1.0"
authors = ["Jose Ricardo Ziviani <jose@ziviani.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true

[dependencies]
regex = "1"
phf = { version = "0.8.0", features = ["macros"] }
rustyline = "6.2.0"
